# desktop-assistant

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.openclaw/: .gitignore  CI_CD_POLICY.md  COMMAND_TEMPLATE.md  ENV_INDEX.md  PROCESS.md  PROJECT_INDEX.md  TODO.md
.openclaw/ulw/: RUNS.md  collect.sh  prompt.md  run.sh
.opencode/: config.json
backlog/: config.yml  ubuntu.md
backlog/docs/: TASK-13-test-report.md  linux-gui-test-plan.md
backlog/tasks/: task-1 - EPIC-便签核心能力升级（Markdown-OCR-快捷键-回收站-Ubuntu）.md  task-1 - Linux-托盘与窗口行为完善.md  task-10 - 文本快捷键系统：Tab-格式化-自定义快捷键.md  task-10 - 日历便签背景颜色与透明度.md  task-11 - 便签去除移入垃圾桶按钮.md  task-11 - 删除流程重构：便签页移除直接删除按钮.md  task-12 - CI-CD-迁移：Tauri2-构建与产物发布.md  task-12 - 补充Mermaid架构图.md  task-13 - Linux-Windows跨平台全面测试.md  task-13 - 文档与迁移指南：Electron-Tauri2.md  task-14 - Windows-窗口无边框-多窗口加载与关闭修复.md  task-14 - 自动发版.md  task-15 - Playwright-Electron-自动化测试拆解.md  task-2 - Linux-启动项（autostart）支持.md  task-2 - Markdown-模式开关与实时预览.md  task-3 - Linux-deb-rpm-元数据与桌面集成优化.md  task-3 - OCR-截图识别文字.md  task-4 - CI-Linux-打包与发布验证增强.md  task-4 - 文本快捷键-Tab格式化与自定义快捷.md  task-5 - Docs-Linux-安装与更新指南.md  task-5 - 删除流程重构-垃圾桶缓冲与彻底删除分离.md  task-6 - Linux-Ubuntu-适配与打包验证.md  (+7 more)
scripts/: auto-commit.mjs  dev.mjs  e2e-note-caret.mjs  e2e-note-scroll.mjs  e2e-note-sync-ocr.mjs  prepare-tesseract-assets.mjs  validate-openclaw-docs.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+20 files in other folders)
