[package]
name = "desktop-assistant"
version = "1.0.5"
description = "桌面助手 - 便签与日历桌面小工具"
authors = ["HardMakabaka <hardmakabaka@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "desktop_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
webbrowser = "1"
